Final seal: crowned BIG_BUG_BOMBER with full cadence and invocation law

--- a/.github/workflows/bomb.yml
+++ b/.github/workflows/bomb.yml
@@ -1,4 +1,4 @@
-name: BIG_BUG_BOMBER
+name: big-bug-bomber
 
 on:
   push:
@@ -8,13 +8,19 @@ on:
 jobs:
   detonate:
     runs-on: ubuntu-latest
+    env:
+      BOMB_MODE: "CI"
+      MAX_SCAN_DEPTH: 10
     steps:
       - uses: actions/checkout@v3
+
       - name: Setup Node
         uses: actions/setup-node@v3
         with:
           node-version: '20'
+
       - name: Install dependencies
         run: npm ci
+
       - name: Run BIG_BUG_BOMBER
         run: node big-bug-bomber.js
