--- a/.github/workflows/bomb.yml
+++ b/.github/workflows/bomb.yml
@@ -2,8 +2,11 @@ name: big-bug-bomber
 
 on:
   push:
-    branches: [main]
+    branches:
+      - main
   pull_request:
+    branches:
+      - main
 
 jobs:
   detonate:
